feature get product comments api spec (#4)
* fix api name

* add get product comment by product id api spec

* fix api spec

* add logic

* fix Makefile
